# quant-learning

./: .gitignore  README.md
a-linear-algebra-primer-for-financial-engineering/: 01-vectors-and-matrices.ipynb  01-vectors-and-matrices.py
a-tour-of-cpp/: run.sh
a-tour-of-cpp/01-the-basics/: hello.cpp  nullptr.cpp  print_square.cpp  range_for.cpp  reference-vs-pointer.cpp
data-driven-investment/: SP500_data.csv
essential-math-for-data-science/: 01-basic-math-and-calculus.ipynb  01-basic-math-and-calculus.py  02-probability.ipynb  02-probability.py  03-descriptive-and-inferential-statistics.ipynb  03-descriptive-and-inferential-statistics.py  04-linear-algebra.ipynb  04-linear-algebra.py  05-linear-regression.ipynb  05-linear-regression.py  2-probability.ipynb
grokking-algorithms/: 01-intro-algorithms.ipynb  01-intro-algorithms.py  01-intro-algorithms.sc  02-selection-sort.ipynb  02-selection-sort.py  02-selection-sort.sc  03-recursion.ipynb  03-recursion.py  04-quicksort.ipynb  04-quicksort.py  04-quicksort.sc  06-breadth-first-search.ipynb  06-breadth-first-search.py  06-breadth-first-search.sc  07-dijkstra.py  07-dijkstra.sc
math-for-deep-learning/: 02-probability.ipynb
probability-theory-a-concise-course/: 01-basic-concepts.ipynb  01-basic-concepts.py
quantinsti-tutorials/: Pipfile  long-short-equity-strategy.py  mean-reversion-strategies.py
simple-strategy-zipline/: simple-statregy-zipline.ipynb  simple-statregy-zipline.py
trading-evolved/: Pipfile
trading-systems/: Pipfile
various-tutorials/pqn-fama-french-tut/: notebook.py  pyproject.toml
(+267 files in other folders)
