[project]
name = "pqn-fama-french-tut"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datetime>=5.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "pandas-datareader>=0.10.0",
    "statsmodels>=0.14.4",
    "yfinance>=0.2.51",
]
